--- a/index.html
+++ b/index.html
@@ -5,21 +5,55 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mono Corp - MoonStock</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    .Body {
+      background-color: #121212;
+    }
+
+    .text {
+      display: inline-block;
+      font-family: "Lucida Console", "Courier New", monospace;
+      color: white;
+    }
+
+    .text2 {
+      font-family: "Lucida Console", "Courier New", monospace;
+      color: white;
+    }
+
+    .icon {
+      display: inline-block;
+      vertical-align: middle; /* Centraliza o ícone verticalmente em relação ao texto */
+      margin-right: 10px; /* Espaçamento opcional */
+    }
+
+    .space {
+      color: #121212;
+    }
+
+    .print {
+      position: absolute;
+      right: 0; /* Alinha à direita */
+      top: 50%; /* Posiciona no meio verticalmente */
+      transform: translateY(-50%); /* Centraliza verticalmente de forma exata */
+      height: 350px;
+      width: 700px;
+    }
+  </style>
 </head>
 <body class="Body">
   <img class="icon" width="96" src="icon.svg">
   <h1 class="text">MoonStock</h1>
   <h1 class="space">   -   </h1>
-  <h2 class="text2">O MoonStock oferece uma interface intuitiva e amigavel</h2>
+  <h2 class="text2">O MoonStock oferece uma interface intuitiva e amigável</h2>
   <h2 class="text2">para manter o seu negócio o mais organizado e eficiente possível.</h2>
-    <h1 class="space">   -   </h1>
+  <h1 class="space">   -   </h1>
   <h2 class="text2">Você pode organizar o seu estoque e fazer suas vendas</h2>
-  <h2 class="text2">em um único lugar por somente R$ 100,00 para uso vitálicio</h2>
+  <h2 class="text2">em um único lugar por somente R$ 100,00 para uso vitalício</h2>
   
   <img class="print" height="350" width="700" src="stockprint.png">
-    <h1 class="space">   -   </h1>
+  <h1 class="space">   -   </h1>
   <h2 class="text2">Caso tenha interesse, entre em contato: social.mono.softwares@gmail.com</h2>
-  
 </body>
 </html>
+
