--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MoonStock</title>
+  <title>Mono Corp - MoonStock</title>
   <style>
     * {
       box-sizing: border-box;
@@ -98,7 +98,7 @@
     <h2 class="text2">para manter o seu negócio o mais organizado e eficiente possível.</h2>
     <h1 class="space">   -   </h1>
     <h2 class="text2">Você pode organizar o seu estoque e fazer suas vendas</h2>
-    <h2 class="text2">em um único lugar por somente R$ 100,00 para uso vitalício</h2>
+    <h2 class="text2">em um único lugar por somente R$ 100,00 por um uso vitalício.</h2>
     
     <img class="print" src="stockprint.png" alt="Stock print">
     <h1 class="space">   -   </h1>
