--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       max-width: 700px; /* Limite máximo */
       height: auto; /* Ajusta automaticamente a altura */
       margin: 20px 0;
+      border: 3px ;
+      border-radius: 20px ;
     }
 
     /* Media queries para ajustar em telas menores */
