--- a/index.html
+++ b/index.html
@@ -1,85 +1,204 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mono Corp - MoonStock</title>
-</head>
-<body class="bg-gradient-to-t from-blue-950 to-blue-900  text-[#101232] flex justify-center items-center min-h-screen">
-  <h1 class="sr-only">Glassy Profile</h1>
-  <input type="checkbox" id="data" class="sr-only peer/data"  role="switch" aria-label="Data Toggle">
-  <input type="checkbox" id="content" class="sr-only peer/content"  role="switch" aria-label="Content Toggle">
-  <div class="z-10 rounded-xl overflow-hiddenS group relative
-        before:absolute
-        before:w-32
-        before:aspect-square
-        before:rounded-full
-        before:bg-blue-600
-        before:blur-lg 
-        before:right-3
-        before:top-0
-        before:-z-10
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Mono Company</title>
+    <style>
+      /* CSS integrado para responsividade */
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
 
-        after:absolute
-        after:w-32
-        after:aspect-square
-        after:rounded-full
-        after:bg-teal-300
-        after:blur-lg 
-        after:left-4
-        after:bottom-0
-        after:-z-10
+      .box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+      }
 
-        peer-checked/data:first:[&_#toggle-data>span]:scale-0
-        peer-checked/data:last:[&_#toggle-data>span]:scale-100
+      .group {
+        position: relative;
+        max-width: 100%;
+        width: 100%;
+        overflow: hidden;
+      }
 
-        peer-checked/data:[&_#panel-data]:-translate-y-14
-        peer-checked/data:[&_#panel-social]:translate-y-12
+      .overlap-group {
+        position: relative;
+        max-width: 100%;
+        margin: 0 auto;
+      }
 
-        peer-checked/content:[&_#panel-content]:opacity-100
-        peer-checked/content:[&_#panel-content]:pointer-events-auto
-       ">
-    <div class="relative bg-white rounded-xl bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-70 w-60 p-8 text-center">
-      <img src="logo.png">
+      .background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          180deg,
+          rgba(0, 13, 56, 0.8) 0%,
+          rgba(85, 0, 83, 0.64) 100%
+        );
+      }
 
-      <h3 class="font-bold mt-6">The Mono Company</h3>
-      <p class="flex items-center justify-center gap-1 text-sm">
-        <span class="material-symbols-outlined text-lg">location_on</span>
-        Vianópolis, GO
-      </p>
+      .bar {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 90px;
+        background: linear-gradient(
+          180deg,
+          rgba(46, 0, 255, 0.79) 0%,
+          rgba(28, 0, 153, 0.79) 100%
+        );
+      }
 
-      <label for="content" class="block mt-4 cursor-pointer  text-xs rounded-full p-2 px-3 bg-[#101232] text-white transition hover:shadow-xl hover:scale-110">Sobre Nós</label>
+      .pngtreefuturistic {
+        position: relative;
+        width: 80%;
+        max-width: 1530px;
+        height: auto;
+        margin: 20px auto;
+        display: block;
+      }
 
+      .text-wrapper {
+        position: relative;
+        margin: 20px auto;
+        color: #ffffff;
+        font-size: 40px;
+        text-align: center;
+        text-shadow: 0px 4px 4px #00000040;
+      }
+
+      .rectangle,
+      .div,
+      .rectangle-2 {
+        background-color: #ffffff63;
+        border-radius: 40px;
+        box-shadow: 0px 4px 4px #00000040;
+        backdrop-filter: blur(109.7px) brightness(100%);
+        -webkit-backdrop-filter: blur(109.7px) brightness(100%);
+        margin: 20px auto;
+        padding: 20px;
+        width: 90%;
+        max-width: 994px;
+        text-align: center;
+        font-size: 1rem;
+      }
+
+      .text-wrapper-2 {
+        color: #ffffffd6;
+        font-size: 2.5rem;
+        text-shadow: 0px 26px 99.3px #0000005e;
+      }
+
+      .p,
+      .text-wrapper-3,
+      .text-wrapper-4 {
+        color: #000;
+        font-size: 1.2rem;
+        text-align: center;
+        margin: 10px;
+      }
+
+      .text-wrapper-5 {
+        font-size: 13px;
+        color: #ffffff;
+        text-align: right;
+      }
+
+      /* Responsividade para tablets */
+      @media (max-width: 768px) {
+        .text-wrapper {
+          font-size: 1.5rem;
+        }
+
+        .rectangle,
+        .div,
+        .rectangle-2 {
+          font-size: 1rem;
+          padding: 15px;
+        }
+
+        .text-wrapper-2 {
+          font-size: 2rem;
+        }
+
+        .p,
+        .text-wrapper-3,
+        .text-wrapper-4 {
+          font-size: 1rem;
+        }
+      }
+
+      /* Responsividade para celulares */
+      @media (max-width: 480px) {
+        .bar {
+          height: 60px;
+        }
+
+        .text-wrapper {
+          font-size: 1.2rem;
+        }
+
+        .rectangle,
+        .div,
+        .rectangle-2 {
+          padding: 10px;
+          font-size: 0.9rem;
+        }
+
+        .text-wrapper-2 {
+          font-size: 1.5rem;
+        }
+
+        .p,
+        .text-wrapper-3,
+        .text-wrapper-4 {
+          font-size: 0.9rem;
+        }
+
+        .text-wrapper-5 {
+          font-size: 0.8rem;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="box">
+      <div class="group">
+        <div class="overlap-group">
+          <div class="background"></div>
+          <div class="bar"></div>
+          <img class="pngtreefuturistic" src="img.png" />
+          <div class="text-wrapper">The MONO Company</div>
+          <div class="rectangle">
+            <p class="text-wrapper-2">Hello, YOU!</p>
+          </div>
+          <div class="div">
+            <p class="p">
+              A MONO Company é especializada no desenvolvimento de aplicativos para otimizar a gestão de empresas de
+              todos os tamanhos. Nosso principal produto é o MoonStock, um gerenciador de estoque projetado para
+              simplificar o controle de inventário, automatizar tarefas e gerar insights estratégicos, ajudando nossos
+              clientes a tomar decisões com mais agilidade e precisão.
+            </p>
+          </div>
+          <div class="rectangle-2">
+            <p class="text-wrapper-3">
+              Na MONO Company, acreditamos que a tecnologia deve ser acessível e eficiente, impulsionando o crescimento
+              dos negócios. Estamos prontos para levar sua empresa ao próximo nível com soluções que transformam
+              desafios em oportunidades!
+            </p>
+          </div>
+          <div class="text-wrapper-4">Contato: social.mono.softwares@gmail.com</div>
+          <div class="text-wrapper-5">png image from pngtree.com</div>
+        </div>
+      </div>
     </div>
-
-    <label id="toggle-data" for="data" class="grid [grid-template-areas:'stack'] place-content-center absolute top-4 right-4 cursor-pointer hover:scale-150 transition 
-            *:[grid-area:stack]
-            *:transition-all
-            *:duration-300
-            *:text-sm
-            last:*:scale-0
-        ">
-      <span class="material-symbols-outlined">density_large</span>
-      <span class="material-symbols-outlined">close</span>
-    </label>
-
-    <div id="panel-data" class="absolute -top-4 left-8 right-8 w-8/10 h-40  -z-20 bg-[#101232] rounded-t-md text-white p-6 pt-4 transition duration-300">
-      <p>Software Dev</p>
-      <a href="#">@monosoftwares</a>
-    </div>
-
-    <div id="panel-social" class="absolute transition duration-300 -bottom-4 left-8 right-8 p-6 pb-2 w-8/10 h-20 -z-20 bg-[#101232] text-white rounded-b-md flex items-center justify-between gap-2 [&>svg]:cursor-pointer [&>svg]:w-5 [&>svg]:h-5 [&>svg:hover]:scale-125 [&>svg]:transition">
-    </div>
-    
-    <div class="absolute bg-white inset-0 -z-20 rounded-xl"></div>
-
-    <div id="panel-content" class="absolute bg-white inset-0 opacity-0 pointer-events-none transition-all duration-500 rounded-xl p-8 space-y-4">
-      <h2 class="font-bold">The Mono Company</h2>
-      <p class="text-sm">A MONO Company é especializada no desenvolvimento de aplicativos de todos os tipos. Nosso principal produto é o MoonStock, um gerenciador de estoque projetado para simplificar o controle de inventário.</p>
-      <label for="content" class="cursor-pointer absolute top-0 right-4  w-6 h-6 text-base text-gray-500 grid place-items-center material-symbols-outlined hover:scale-150  transition">close</label>
-    </div>
-
-  </div>
-</body>
+  </body>
 </html>
