--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="overlap-group">
           <div class="background"></div>
           <div class="bar"></div>
-          <img class="pngtreefuturistic" src="img.png" />
+          <img class="pngtreefuturistic" src="—Pngtree—futuristic abstract colorful shape 3d_13245973.png" />
           <div class="text-wrapper">The MONO Company</div>
           <div class="rectangle">
             <p class="text-wrapper-2">Hello, YOU!</p>
