--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="bar"></div>
         <img
           class="pngtreefuturistic"
-          src="img/pngtree-futuristic-abstract-colorful-shape-3d-13245973-1.png"
+          src="—Pngtree—futuristic abstract colorful shape 3d_13245973.png"
           alt="Background Image"
         />
         <div class="text-wrapper">The MONO Company</div>
