--- a/index.html
+++ b/index.html
@@ -2,146 +2,125 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Mono Company</title>
     <style>
-      /* CSS integrado com ajustes de responsividade */
-      body, html {
+      /* Estilos globais */
+      * {
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
-        background-color: #f3f3f3;
-        overflow-x: hidden;
-      }
-
-      .box {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        padding: 20px;
         box-sizing: border-box;
       }
 
-      .group {
-        position: relative;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-
-      .background {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
         background: linear-gradient(
           180deg,
-          rgba(0, 13, 56, 0.8) 0%,
-          rgba(85, 0, 83, 0.64) 100%
+          rgba(0, 13, 56, 0.8),
+          rgba(85, 0, 83, 0.64)
         );
-        z-index: -1;
+        color: #ffffff;
+        text-align: center;
+      }
+
+      .box {
+        width: 100%;
+        max-width: 1200px;
+        padding: 20px;
+        position: relative;
       }
 
       .bar {
-        width: 100%;
-        height: 70px;
         background: linear-gradient(
           180deg,
-          rgba(46, 0, 255, 0.79) 0%,
-          rgba(28, 0, 153, 0.79) 100%
+          rgba(46, 0, 255, 0.79),
+          rgba(28, 0, 153, 0.79)
         );
+        padding: 20px;
+        font-size: 24px;
+        font-weight: bold;
       }
 
-      .pngtreefuturistic {
+      .background-image {
         width: 100%;
         max-width: 800px;
-        height: auto;
-        display: block;
         margin: 20px auto;
+        position: relative;
+        display: block;
       }
 
-      .text-wrapper {
+      .content {
+        background-color: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(5px);
+        border-radius: 15px;
+        padding: 20px;
+        margin: 20px 0;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
+
+      .title {
+        font-size: 64px;
         color: #ffffff;
-        font-size: 2rem;
-        text-align: center;
-        padding: 20px;
-        text-shadow: 0px 4px 4px #00000040;
+        font-family: "Abril Fatface", serif;
       }
 
-      .rectangle, .div, .rectangle-2 {
-        background-color: #ffffff63;
-        border-radius: 20px;
-        box-shadow: 0px 4px 4px #00000040;
-        backdrop-filter: blur(10px);
-        padding: 20px;
-        margin: 20px;
-        color: #000000;
-        font-size: 1rem;
+      .text-wrapper-2,
+      .p,
+      .text-wrapper-3,
+      .text-wrapper-4,
+      .text-wrapper-5 {
+        margin: 15px 0;
+        font-size: 18px;
       }
 
-      .rectangle-2 {
-        text-align: center;
-        font-size: 1.1rem;
+      .text-wrapper-5 {
+        font-size: 12px;
+        opacity: 0.7;
       }
 
-      /* Responsividade para tablets */
+      /* Estilos responsivos */
       @media (max-width: 768px) {
-        .text-wrapper {
-          font-size: 1.5rem;
+        .title {
+          font-size: 48px;
         }
 
-        .rectangle, .div, .rectangle-2 {
-          font-size: 0.9rem;
-        }
-      }
-
-      /* Responsividade para celulares */
-      @media (max-width: 480px) {
-        .bar {
-          height: 60px;
+        .text-wrapper-2,
+        .p,
+        .text-wrapper-3,
+        .text-wrapper-4 {
+          font-size: 16px;
         }
 
-        .text-wrapper {
-          font-size: 1.2rem;
-        }
-
-        .rectangle, .div, .rectangle-2 {
-          font-size: 0.8rem;
+        .background-image {
+          max-width: 100%;
         }
       }
     </style>
   </head>
   <body>
     <div class="box">
-      <div class="group">
-        <div class="background"></div>
-        <div class="bar"></div>
-        <img
-          class="pngtreefuturistic"
-          src="—Pngtree—futuristic abstract colorful shape 3d_13245973.png"
-          alt="Background Image"
-        />
-        <div class="text-wrapper">The MONO Company</div>
-        <div class="rectangle">
-          <p>Hello, YOU!</p>
-        </div>
-        <div class="div">
-          <p>
-            A MONO Company é especializada no desenvolvimento de aplicativos para otimizar a gestão de empresas de
-            todos os tamanhos. Nosso principal produto é o MoonStock, um gerenciador de estoque projetado para
-            simplificar o controle de inventário, automatizar tarefas e gerar insights estratégicos, ajudando nossos
-            clientes a tomar decisões com mais agilidade e precisão.
-          </p>
-        </div>
-        <div class="rectangle-2">
-          <p>
-            Na MONO Company, acreditamos que a tecnologia deve ser acessível e eficiente, impulsionando o crescimento
-            dos negócios. Estamos prontos para levar sua empresa ao próximo nível com soluções que transformam
-            desafios em oportunidades!
-          </p>
-        </div>
+      <div class="bar">The MONO Company</div>
+      <img
+        class="background-image"
+        src="img/pngtree-futuristic-abstract-colorful-shape-3d-13245973-1.png"
+        alt="Background Art"
+      />
+      <div class="content">
+        <h1 class="title">Hello, YOU!</h1>
+        <p class="p">
+          A MONO Company é especializada no desenvolvimento de aplicativos para otimizar a gestão de empresas de todos
+          os tamanhos. Nosso principal produto é o MoonStock, um gerenciador de estoque projetado para simplificar o
+          controle de inventário, automatizar tarefas e gerar insights estratégicos, ajudando nossos clientes a tomar
+          decisões com mais agilidade e precisão.
+        </p>
+        <p class="text-wrapper-3">
+          Na MONO Company, acreditamos que a tecnologia deve ser acessível e eficiente, impulsionando o crescimento dos
+          negócios. Estamos prontos para levar sua empresa ao próximo nível com soluções que transformam desafios em
+          oportunidades!
+        </p>
         <div class="text-wrapper-4">Contato: social.mono.softwares@gmail.com</div>
         <div class="text-wrapper-5">png image from pngtree.com</div>
       </div>
