--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="bar">The MONO Company</div>
       <img
         class="background-image"
-        src="img/pngtree-futuristic-abstract-colorful-shape-3d-13245973-1.png"
+        src="—Pngtree—futuristic abstract colorful shape 3d_13245973.png"
         alt="Background Art"
       />
       <div class="content">
