--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <img
       class="background-image"
-      src="img/pngtree-futuristic-abstract-colorful-shape-3d-13245973-1.png"
+      src="—Pngtree—futuristic abstract colorful shape 3d_13245973.png"
       alt="Background Art"
     />
   </body>
